<resources>
    <string name="app_name">SmartPickUser</string>
    <string name="smartpickup">smartpickUP</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_as_account">Create An Account</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_code">otp code</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="edit_number">Edit Number</string>
    <string name="verify">Verify</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="user_name">Full Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="about_me">+91 9654555555</string>
    <string name="notifications">Notifications</string>
    <string name="ride_history">My Bookings</string>
    <string name="payment_history">Payment History</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="pick_location">Pick Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="reject">Reject</string>
    <string name="pickup_later">Pickup Later</string>
    <string name="lorem_ipsum_is_a_placeholder_text_csutom_view_back_id">Lorem ipsum is a placeholder text csutom view back id</string>
    <string name="txt_amt">Approx Amt</string>
    <string name="pickup_now">Booking Now</string>
    <string name="selected_truck">Selected Truck</string>
    <string name="your_information">Your Information</string>
    <string name="pick_up_time">Pick up Time</string>
    <string name="pick_time">Pick Time</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="stuff_name">Stuff Name</string>
    <string name="_00_30">00:30</string>
    <string name="attach_photos">Attach Photos</string>
    <string name="book">Book Now</string>
    <string name="successfully_done">Successfully Done !</string>
    <string name="Gps_done">Location Not Enable ?</string>
    <string name="back">Back</string>
    <string name="your_ride_request_successfully_sent_to_our_driver_n_we_will_get_to_you_soon">your pickup driver will be arriving soon</string>
    <string name="refresh">Refresh</string>
    <string name="username">UserName</string>
    <string name="live_track">Live Track</string>
    <string name="_10_minute_ago">10 minute ago</string>
    <string name="_27_march_2020">27 march 2020</string>
    <string name="saturday">Saturday</string>
    <string name="_223">$223</string>
    <string name="pick_location_full_address">Pick Location (Full Address)</string>
    <string name="drop_location_full_address">Drop Location (Full Address)</string>
    <string name="id_number_abc123">Id Number : #ABC123</string>
    <string name="date_02_feb_2020">Date : 02 Feb 2020</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="stuff_details">Stuff Details</string>
    <string name="attachment">Attachment</string>
    <string name="payment_received">Payment Received</string>
    <string name="successfully">Pending</string>
    <string name="credit_card">Cash</string>
    <string name="view_payment_details">View Live Tracking</string>
    <string name="payment_details">Payment Details</string>
    <string name="money_received">Money Received</string>
    <string name="_02_feb_2020_1_30_pm">02 Feb 2020, 1.30 pm</string>
    <string name="from">From</string>
    <string name="card_name">Card Name</string>
    <string name="_7869696032560">7869696032560</string>
    <string name="bank_name">Bank Name</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="k4895621atgkm752">k4895621ATGKM752</string>
    <string name="view_booking_details">View Booking Details</string>
    <string name="txt_pickup_loc">Pickup from</string>
    <string name="txt_multiple">Multiple</string>
    <string name="txt_drop_loc">Drop at</string>
    <string name="txt_enter_drop">Enter drop location</string>
    <string name="txt_enter_des">Enter landmark location</string>
    <string name="txt_enter_land_mark">Enter land mark</string>
    <string name="doyouwanttologout">Do you want to logout?</string>
    <string name="txt_enter_pickup">Enter pickup location</string>
    <string name="lorem_ispum_dollor">Lorem ispum Dollor</string>
    <string name="txt_pickup_time">Pickup Time</string>
    <string name="txt_distance">Distance</string>
    <string name="txt_v_type">Vehicle Type</string>
    <string name="txt_change">Change</string>
    <string name="txt_cash">Cash</string>
    <string name="txt_wallet">Wallet</string>
    <string name="accept">Accept</string>
    <string name="appreance">Appearance</string>
    <string name="night_mode">Night Mode</string>
    <string name="sound">Sound</string>
    <string name="txt_cmg_soon">Coming Soon</string>
    <string name="txt_enter_no">Ex. Ground Floor</string>
    <string name="txt_flor">Floor</string>
    <string name="txt_lift">Lift Facility</string>
    <string name="txt_goods_type">Goods Type</string>
    <string name="txt_packing_mat">Packaging Required ?</string>
    <string name="txt_installer_charge">Installer Charge</string>
    <string name="txt_installer">Need Installer ?</string>
    <string name="txt_add_rev_contact">Add Receiver Contact</string>
    <string name="txt_delivery_msg">Driver will call this number at delivery point</string>
  <string name="discription_section">Goods description?</string>
    <string name="privacy">Privacy</string>
    <string name="change_your_password">Change your Password</string>
    <string name="_91_741_000_3363">(+91)-741 000 3363</string>
    <string name="price">Price :</string>
    <string name="delete_account">Delete Account</string>
    <string name="_45_minus">45 minus</string>
    <string name="time">Time :</string>
    <string name="distance">Distance</string>
    <string name="_3_5_k_m">3.5 k.m.</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash">Cash</string>
    <string name="end_ride">End Ride</string>
    <string name="settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="save_amp_exit"><![CDATA[Save & Exit]]></string>
    <string name="change_user_profile_photos">Change User profile Photos</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="dob">Dob</string>
    <string name="set_your_location">Set your Location</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="small_truck">Small Truck</string>
    <string name="med_truck">Med.Truck</string>
    <string name="med_truck_covering">Med.Truck(Covering)</string>
    <string name="txt_confirm_book">Confirm Booking</string>
    <string name="land_mark">Land Mark</string>
    <string name="txt_search">Search for Goods Type</string>
    <string name="txt_ok">OK</string>
    <string name="notification_channel_id">my_channel_01</string>
    <string name="txt_name">Name</string>
    <string name="txt_mob_hint">Mobile Number</string>
    <string name="contact_list">Contact List</string>
    <string name="not_record_available">Unable to find the list of booking</string>
    <string name="history_details">History Details</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="helper">Helper</string>
    <string name="reciver_name">Receiver Name</string>
    <string name="reciver_nubmer">Receiver Number</string>
    <string name="txt_conf_route">Confirm Route</string>
    <string name="txt_drop_locations">Select Drops</string>
    <string name="gps_is_disable_in_your_device_would_you_like_to_enable_it">Gps is disable in your device, Would you like to enable it ?</string>
    <string name="apply_promocode">Apply Promocode</string>
    <string name="user_number">User Number</string>
    <string name="booking_done">Booking Done</string>
    <string name="enter_promocode">Enter Promocode</string>
    <string name="email">Email Address</string>
    <string name="notification_not_available">Notification data not available</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="driver_number">Driver number</string>
    <string name="not_arrive">Not Arrive</string>
    <string name="language">Language</string>
    <string name="exit">Are you sure you want to exit the activity?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="required">Required</string>
    <string name="invalid_mobile_number">Invalid Mobile No.</string>
    <string name="invalid_user_name">Invalid User Name</string>
    <string name="wrong_otp">Wrong Otp</string>
    <string name="invalid_email">Invalid email</string>
    <string name="select_gender">Select gender</string>
    <string name="dob_required">Dob Required</string>
    <string name="Please_select_valid_pick_location">Please select valid pick location !</string>
    <string name="Please_select_valid_drop_location">Please select valid drop location !</string>
    <string name="Please_select_goods_type">Please select goods type !</string>
    <string name="english">English</string>
    <string name="arabic">Ethiopian</string>

</resources>
