<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_ride_history"
            android:icon="@drawable/ride"
            android:title="@string/ride_history" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_about_me"
            android:icon="@drawable/aboutus"
            android:title="@string/about_me" />
        <item
            android:id="@+id/nav_laungvage"
            android:icon="@drawable/language"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>


</menu>
