<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

    <RelativeLayout
        android:id="@+id/rlHomeToolbarId"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivbackId"
            android:layout_width="26sp"
            android:layout_height="22sp"
            android:padding="3sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_feather_arrow_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/payment_details"
            android:visibility="visible"
            android:textColor="@color/coloryellow"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap">

        </androidx.appcompat.widget.AppCompatTextView>



    </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_above="@+id/viewpaymentdetailsId"
            android:layout_below="@+id/rlHomeToolbarId"
            android:layout_height="match_parent">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:id="@+id/repaymentrecivedId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp">


                <LinearLayout
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money_received"
                    android:fontFamily="serif"
                    android:textColor="@color/textblack"
                    android:textSize="12sp"/>


                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_223"
                        android:fontFamily="serif"
                        android:textColor="@color/textblack"
                        android:textSize="@dimen/_20sdp"/>


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/ivPaymentid"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@drawable/icon_awesome_share_alt"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp" />



                </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_02_feb_2020_1_30_pm"
                    android:fontFamily="serif"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/textblack"
                    android:textSize="12sp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_alignParentRight="true"
                android:orientation="vertical"
                android:id="@+id/liprofileId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/right_icon" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:text="@string/payment_received"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/textblack"
                    android:fontFamily="serif"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </RelativeLayout>

                <View
                    android:id="@+id/viewtruckId"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/ColorGray"
                    android:layout_below="@+id/repaymentrecivedId"
                    android:layout_height="@dimen/_1sdp" />


                <RelativeLayout
                    android:id="@+id/recarddetailsid"
                    android:layout_below="@+id/viewtruckId"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:fontFamily="serif"
                            android:textStyle="italic"
                            android:textColor="@color/textblack"
                            android:textSize="12sp"/>


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/card_name"
                            android:fontFamily="serif"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:textColor="@color/textblack"
                            android:textSize="12sp"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/_7869696032560"
                            android:textColor="@color/textblack"
                            android:textSize="12sp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bank_name"
                            android:fontFamily="serif"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:textColor="@color/textblack"
                            android:textSize="12sp"/>



                    </LinearLayout>


                    <LinearLayout
                        android:layout_alignParentRight="true"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true">



                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:text="@string/transaction_id"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:textColor="@color/textblack"
                            android:fontFamily="serif"
                            android:textStyle="italic"
                            android:layout_gravity="center"
                            android:textSize="12sp"
                            android:layout_height="wrap_content"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:text="@string/k4895621atgkm752"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:textColor="@color/textblack"
                            android:fontFamily="serif"
                            android:layout_gravity="center"
                            android:textSize="12sp"
                            android:layout_height="wrap_content"/>


                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="right"
                            android:src="@drawable/icon_material_payment" />

                    </LinearLayout>

                </RelativeLayout>

                <View
                    android:id="@+id/viewcardtruckId"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/ColorGray"
                    android:layout_below="@+id/recarddetailsid"
                    android:layout_height="@dimen/_1sdp" />

                <RelativeLayout
                    android:id="@+id/relocaionpickId"
                    android:layout_below="@+id/viewcardtruckId"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"                android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivlocationId"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="5sp"
                        android:src="@drawable/locaiton_icon"
                        android:layout_marginRight="5sp"
                        android:layout_marginLeft="@dimen/_15sdp" />

                    <RelativeLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:id="@+id/locationId"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_toRightOf="@+id/ivlocationId"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_toEndOf="@+id/ivlocationId">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:id="@+id/userNameId"
                            android:text="@string/pick_location"
                            android:textColor="@color/textblack"
                            android:fontFamily="serif"
                            android:textSize="12sp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:layout_height="wrap_content"/>
                        <View
                            android:layout_width="match_parent"
                            android:id="@+id/nearlocationId"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:background="@color/ColorGray"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_below="@+id/userNameId"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginLeft="@dimen/_3sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:text="@string/drop_location"
                            android:layout_below="@+id/nearlocationId"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:textColor="@color/textblack"
                            android:fontFamily="serif"
                            android:textSize="12sp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp" />

                    </RelativeLayout>

                </RelativeLayout>




            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/viewpaymentdetailsId"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/colorwhite">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="12dp"
                android:text="@string/view_booking_details"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <View
                android:layout_width="@dimen/_20sdp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:layout_height="@dimen/_2sdp"/>


        </LinearLayout>


    </RelativeLayout>
</LinearLayout>