<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/button_shape"
        android:paddingBottom="@dimen/_20sdp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvholyplaceId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:gravity="center"
            android:fontFamily="serif"
            android:text="@string/Gps_done"
            android:textColor="@color/textblack"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvholyplacedescripId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_below="@+id/tvholyplaceId"
            android:fontFamily="serif"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/gps_is_disable_in_your_device_would_you_like_to_enable_it"
            android:textColor="@color/textblack"
            android:textSize="14.dip"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_below="@+id/tvholyplacedescripId"
            android:id="@+id/rlSigninId"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/_100sdp"
            android:padding="10sp"
            android:layout_height="@dimen/_30sdp"
             android:background="@drawable/button_shape_main">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/txt_ok"
                android:textColor="@color/coloryellow"
                android:textSize="@dimen/_12sdp" />


        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/ic_no_gps"/>


    </RelativeLayout>


</RelativeLayout>